# kursach

./: CMakeLists.txt  README.md  build_and_run.bat  circle_geenrator.c  noise_analyzer.c  stats_lib.c  stats_lib.h
output/: outputCalc.txt  outputNoise.txt  outputRef.txt  trajectory.txt
